@startuml BerghAdminClassModel
Class Persoon {
}

Class Rol {
}

enum RolType {
  Contactpersoon 
  Begeleider
  CommissieLid
  Fietser
  Golfer
  MailingAbonnee
  VriendVan
  Vrijwilliger
}

Class Sponsor {
}

Class Ambassadeur {
}

Class GolfDagSponsor {
}

Class VerzondenMail {
}

Class Donateur {
}

class Donatie {
}
note "Relatie met Kentaa\nlater modelleren" as Note3
Donatie .. Note3

class Factuur {
  IsBetaald()
}

enum FactuurType {
  Mail
  Post
  Pdf
  Kentaa
}

class Betaling {
}

enum BetalingType {
  Unknown
  Cash
  Kentaa
  Bank
}

class Document {
}

class Template {
}

class Evenement {
}

class Fietstocht {
}
note "Deelnemers hebben de\nrol Fietser" as Note1
Fietstocht .. Note1

class Golfdag {
}
note "Deelnemers hebben de\nrol Golfer" as Note2
Golfdag .. Note2

Persoon -right- Sponsor : > is verbonden aan
Persoon -up- "*" Rol
Rol -left- RolType : is 1 van >

Persoon "*" -left- "*" VerzondenMail : < verstuurd aan
Persoon "*" -up- "*" Evenement : > neemt deel aan

Donateur <|-up- Persoon
Donateur <|-up- Sponsor
Donateur *-- "1" Donatie : doet >

Ambassadeur -up-|> Sponsor
GolfDagSponsor -up-|> Sponsor

Ambassadeur -down- Factuur
GolfDagSponsor -down- Factuur

Factuur -right- FactuurType : is 1 van >

Betaling -right- BetalingType : is 1 van >

Donatie -- Factuur : > kan resulteren in
Factuur -- Betaling : < is gelinkt aan

Document <|-right- Template

Factuur ..> Document : > bevat tekst
VerzondenMail ..> Document : > bevat tekst

Evenement <|-down- Fietstocht
Evenement <|-down- Golfdag

Evenement -down- Sponsor : > kan gesponsord\nworden door

@enduml
